--- a/dos33.html
+++ b/dos33.html
@@ -4815,11 +4815,11 @@ With that "legalese" out of the way ... enjoy the read!
 2337:E0 F5          070             CPX #<a class='v' href='#VDFLEN'>VDFLEN</a>
 3239:60             071             RTS
                     072 <a class='f' name='FF4A'     >FF4A        </a>EQU *
-                    073 
-                    074 
-                    075 
-                    076 
-                    077 
+323A:A9 00          073             LDA #<span class='n'>0</span>
+323C:AC 9D 33       074             LDY <a class='v' href='#TEMP2'>TEMP2</a>                                       ; /cynical What? Can't do <span class='code'>FILE_ENTRY_OFFSET = TEMP2</span>
+323F:D0 97          075             BNE <a class='x' href='#FF1'>FF1</a>                                         ;
+3241:4C 77 33       076             JMP <a class='x' href='#ERROR9'>ERROR9</a>                                      ; <a class='v' href='#EM9'>EM9</a>: I/O ERROR
+                    077             PAGE
                     078 ;
                     079 ;GETSEC - GET A SECTOR
                     080 ;
