--- a/dos33.html
+++ b/dos33.html
@@ -4827,7 +4827,7 @@ With that "legalese" out of the way ... enjoy the read!
 3244:AD 51 35       082             LDA <a class='v' href='#DCBATK'>DCBATK</a>      ; GET ALLOCATED TRK
 3247:F0 21          <a class='line' name="FLOCSEC.83">083</a>             BEQ <a class="x" href="#GSS1"  >GSS1</a>        ; BR IF NONE                    ; DESIGN FLAW: Can't store file on track 0 !
                     084 ;
-                    085 <a class="f" name="GS0"    >GS0         </a>EQU *
+                    085 <a class='f' name='GS0'    >GS0         </a>EQU *
 3249:CD F0 35       086             DEC <a class='v' href='#DCBALS'>DCBALS</a>      ; DECREMENT SECTOR NO
 324C:30 17          087             BMI <a class='x' href='#CS2'>CS2</a>         ; BR IF NO SECTORS REM
                     088 ;
