--- a/dos33.html
+++ b/dos33.html
@@ -890,7 +890,7 @@ With that "legalese" out of the way ... enjoy the read!
                     00141 105 ; GET RELOCATION PARMS
                     00142 106 ;
                     00143 107 <a class="f" name="DR0"     >DR0         </a>EQU *
-                    00144 108 <a class="d" name="LOC1"    >LOC1        </a>EQU $26                                         ; Monitor ROM GBASL = $26, Pointer to last HGR Byte plotted
+                    00144 108 <a class="d" name="LOC1"    >LOC1        </a>EQU $<span class='n'>26</span>                                         ; Monitor ROM GBASL = $26, Pointer to last HGR Byte plotted
 1B03:A9 BF          00145 109             LDA #$<span class='n'>BF</span>        ; START AT BF00                 ; Top of 48K
 1B05:85 41          00146 110             STA <a  class='v' href='#ZPGWRK' >ZPGWRK</a>+1    ; TO LOOK FOR                   ; ZPGWRK = MemTestAdr
 1B07:A2 00          00147 111             LDX #<span class='n'>0</span>          ; HIGH RAM
